# trading

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.yaml
config/strategies/: scalping.yaml  swing.yaml
docker/: Dockerfile  docker-compose.yaml
models/: model.joblib  model_metadata.json  scaler.joblib
scripts/: run_bot.py  run_web.py  train_model.py
src/ai/: __init__.py  dummy_model.py  feature_engineer.py  feature_pipeline.py  local_model.py  model_interface.py  signal.py
src/core/: __init__.py  config_loader.py  engine.py  event_bus.py  events.py  exceptions.py
src/data/: __init__.py  binance_ws_feed.py  data_store.py  market_sentiment.py  ohlcv_aggregator.py
src/execution/: __init__.py  fill_handler.py  order_executor.py  order_manager.py  paper_executor.py
src/monitoring/: __init__.py  health_check.py  telegram_notifier.py
src/risk/: __init__.py  auto_tuner.py  circuit_breaker.py  portfolio_tracker.py  position_sizer.py  risk_manager.py  trailing_stop.py
src/storage/: __init__.py  db.py  models.py  repository.py
src/strategy/: __init__.py  base_strategy.py  strategy_manager.py
src/utils/: __init__.py  rate_limiter.py  retry.py  time_utils.py
src/web/: __init__.py  app.py  auth.py  dependencies.py  engine_manager.py  event_bridge.py  schemas.py  ws.py
tests/integration/: test_signal_to_fill_flow.py  test_storage.py
tests/unit/: test_circuit_breaker.py  test_event_bus.py  test_paper_executor.py  test_portfolio_tracker.py  test_position_sizer.py  test_risk_manager.py  (+1 more)
(+21 files in other folders)
